# pylogger

./: LICENSE  README.md  __init__.py  log_installer.py  log_update.py  operators.py  py_logger.py  pyproject.toml
.github/workflows/: python-publish.yml
operators/: __init__.py
pylogger_itzwazy.egg-info/: PKG-INFO  SOURCES.txt
