[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "pylogger_itzwazy"
version = "2.1.0"
authors = [
  { name="ItzWazy", email="edugabri1217@gmail.com" },
]
description = "An advanced python log file editor/adder"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Windows",
]

[project.urls]
Homepage = "https://github.com/Legohead69420/pylogger"
Issues = "https://github.com/Legohead69420/pylogger/issues"